[gd_scene load_steps=21 format=2]

[ext_resource path="res://addons/versatile_atlas/resource.gd" type="Script" id=1]
[ext_resource path="res://common/tex/circo_8.png" type="Texture" id=2]
[ext_resource path="res://common/ShadowSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/weapons/ammo/ammo_atlas.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/sfx/bullet_shoot___658823__3dj__battlefield-7.wav" type="AudioStream" id=5]
[ext_resource path="res://common/shaders/fx/bullet_thrust_particles_material.tres" type="Material" id=6]
[ext_resource path="res://game/weapons/ammo/bullet/Bullet.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/sfx/hit_wall.wav" type="AudioStream" id=8]

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="Gradient" id=5283]
offsets = PoolRealArray( 0, 0.348485, 0.731061 )
colors = PoolColorArray( 0, 0, 0, 1, 0.886719, 0.886719, 0.886719, 1, 0.914062, 0.914062, 0.914062, 1 )

[sub_resource type="GradientTexture" id=5284]
gradient = SubResource( 5283 )

[sub_resource type="Curve" id=5288]
max_value = 2.0
_data = [ Vector2( 0, 0.981818 ), 0.0, 0.0, 0, 0, Vector2( 0.418251, 1.9 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.309091 ), -0.878293, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5286]
curve = SubResource( 5288 )

[sub_resource type="ParticlesMaterial" id=5272]
lifetime_randomness = 0.43
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
angular_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 6.03
scale = 0.3
scale_curve = SubResource( 5286 )
color_ramp = SubResource( 5284 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Image" id=5291]
data = {
"data": PoolByteArray( 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255 ),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture" id=5290]
flags = 1
flags = 1
image = SubResource( 5291 )
size = Vector2( 4, 12 )
script = ExtResource( 1 )
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 4, 12 )
margin = Rect2( 0, 0, 0, 0 )
margin_color = Color( 1, 1, 1, 0 )
repeat = false

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.4, 0.3 )

[sub_resource type="AudioStreamRandomPitch" id=5275]
audio_stream = ExtResource( 5 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=5278]
audio_stream = ExtResource( 8 )

[node name="Bullet" type="RigidBody2D"]
script = ExtResource( 7 )

[node name="Shadow" parent="." instance=ExtResource( 3 )]
visible = false
rotation = 1.5708
shadow_casting_node_path = NodePath("../Sprite")

[node name="TrailPosition" type="Position2D" parent="."]
position = Vector2( -6, 0 )

[node name="SmokeParticles" type="Particles2D" parent="."]
material = SubResource( 4 )
position = Vector2( -9, 0 )
amount = 100
randomness = 1.0
local_coords = false
process_material = SubResource( 5272 )
texture = ExtResource( 2 )

[node name="ThrustParticles" type="Particles2D" parent="."]
material = SubResource( 3 )
position = Vector2( -7, 0 )
amount = 3
lifetime = 0.05
randomness = 1.0
process_material = ExtResource( 6 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = SubResource( 5290 )

[node name="BulletCollision" type="CollisionShape2D" parent="."]
position = Vector2( -5.96046e-08, -5.96046e-08 )
scale = Vector2( 5, 10 )
shape = SubResource( 2 )
disabled = true

[node name="VisionRay" type="RayCast2D" parent="."]
position = Vector2( -1, 0 )
enabled = true
cast_to = Vector2( 48, 0 )

[node name="Sounds" type="Node" parent="."]

[node name="BulletShoot" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 5275 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BulletHit" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 5278 )
volume_db = -10.0
pitch_scale = 0.7
bus = "GameSfx"
